# spot_gazebo_sim

./: CMakeLists.txt  package.xml  readme.md
include/gazebo_tutorials/: drone_model.h
launch/: spot.launch
rviz/: gazebo_test.rviz
src/: control_test.py  drone_control_plugin.cpp  gazebo_odom_publisher.py  laser_scan_to_range.py
urdf/: accessories.urdf.xacro  iris_base_velodyne.xacro  rgbd_camera.urdf.xacro  spot.urdf.xacro  stereo_camera.urdf.xacro  test.xacro  uav.xacro
worlds/: empty.world  hello.world  obstacles.world  town.world
